# DarkestDungeonSaveEditor

./: .gitignore  1.index.js  LICENSE  README.md  build.gradle  gradle.properties  index.html  index.js  settings.gradle
.github/workflows/: build.yml  test.yml  wasm.yml
docs/: dson.md
rust/ddsaveedit/: Cargo.toml  README.md
rust/ddsaveedit/ddsaveedit/: Cargo.toml
rust/ddsaveedit/ddsaveedit/benches/: load_save.rs
rust/ddsaveedit/ddsaveedit/src/: main.rs
rust/ddsaveedit/ddsavelib/: Cargo.toml  README.md
rust/ddsaveedit/ddsavelib/benches/: load_save.rs
rust/ddsaveedit/ddsavelib/fuzz/: Cargo.toml
rust/ddsaveedit/ddsavelib/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_bin.rs  fuzz_target_json.rs
rust/ddsaveedit/ddsavelib/src/: err.rs  file.rs  json.rs  lib.rs  util.rs
rust/ddsaveedit/ddsavelib/src/file/: bin.rs  json.rs  mod.rs  parts.rs
rust/ddsaveedit/ddsavelib/src/file/json/: json_parser.rs
rust/ddsaveedit/ddsavelib/tests/: test_loading.rs
rust/ddsaveedit/wasm-ddsaveedit/: .gitignore  Cargo.toml  README.md  index.html  index.js  names_cache.txt  package-lock.json  package.json  webpack.config.js
rust/ddsaveedit/wasm-ddsaveedit/src/: lib.rs
src/de/robojumper/ddsavereader/: Main.java
src/main/resources/: LaunchSampleBot.cmd
src/test/resources/: names.txt
src/test/resources/backerHeroes/: backer_heroes.json
src/test/resources/backgroundNames/: persist.raid.json
src/test/resources/dead_hero_entries/: persist.town_event.json
src/test/resources/modlimit/: novelty_tracker.json  persist.campaign_log.json  persist.campaign_mash.json  persist.curio_tracker.json  persist.estate.json  persist.game.json  persist.game_knowledge.json  persist.journal.json  persist.narration.json  persist.progression.json  persist.quest.json  persist.roster.json  persist.town.json  persist.town_event.json  persist.upgrades.json
src/test/resources/networkFiles/: novelty_tracker_mp.json  persist.game.json  persist.mp_progression.json  persist.narration.json  persist.roster.network.json  persist.town_event.json
src/test/resources/nonAsciiField/: persist.roster.json
src/test/resources/otherFiles/: persist.campaign_log.json  persist.raid.json  persist.roster.json
src/test/resources/profile1/: novelty_tracker.json  persist.campaign_log.json  persist.campaign_mash.json  persist.curio_tracker.json  persist.estate.json  persist.game.json  persist.game_knowledge.json  persist.journal.json  persist.loading_screen.json  persist.map.json  persist.narration.json  persist.progression.json  persist.quest.json  persist.raid.json  persist.roster.json  persist.town.json  persist.town_event.json  persist.upgrades.json
(+67 files in other folders)
